[gd_scene load_steps=4 format=3 uid="uid://cyic7t5yfpo8n"]

[ext_resource type="Script" path="res://Scripts/grillArea/spatula.gd" id="1_e2jqn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_om5ob"]
size = Vector2(79, 70.5)

[sub_resource type="BoxMesh" id="BoxMesh_3feb4"]

[node name="spatula" type="Area2D"]
position = Vector2(0, 4)
script = ExtResource("1_e2jqn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color(0.435294, 0.435294, 0.435294, 1)
shape = SubResource("RectangleShape2D_om5ob")

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
modulate = Color(0.396078, 0.396078, 0.396078, 1)
scale = Vector2(79, 72)
mesh = SubResource("BoxMesh_3feb4")

[node name="MeshInstance2D2" type="MeshInstance2D" parent="."]
modulate = Color(0.396078, 0.396078, 0.396078, 1)
position = Vector2(9.53674e-07, 71)
scale = Vector2(11.75, 83.5)
mesh = SubResource("BoxMesh_3feb4")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
